--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
             path "CMakeLists.txt"
         }
     }
+    buildToolsVersion '27.0.2'
 }
 
 dependencies {
@@ -36,9 +37,7 @@ dependencies {
     implementation project(':aiuilibrary')
     implementation 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-
     compile 'com.skyfishjy.ripplebackground:library:1.0.1'
-
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:cardview-v7:26.+'
     compile 'io.reactivex:rxjava:1.1.0'
@@ -49,18 +48,15 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.google.dagger:dagger:2.0.2'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.0.2'
-
     compile 'com.blankj:utilcode:1.3.6'
-
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.orhanobut:logger:1.15'
     compile 'pub.devrel:easypermissions:0.2.0'
     compile 'cn.bingoogolapple:bga-banner:2.1.7@aar'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     provided 'org.glassfish:javax.annotation:10.0-b28'
     compile 'com.commit451:PhotoView:1.2.4'
-
+    compile 'com.github.open-android:ViewPager:0.1.0'
     compile 'com.bugtags.library:bugtags-lib:2.2.3'
     compile 'com.bugtags.library:bugtags-lib:latest.integration'
     compile 'com.umeng.analytics:analytics:latest.integration'
@@ -68,6 +64,8 @@ dependencies {
     // 多dex 打包的类库
     compile 'com.android.support:multidex:1.0.1'
 
+
+    compile 'com.github.lguipeng:BubbleView:1.0.1'
 }
 
 
