--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     compile 'com.bugtags.library:bugtags-lib:latest.integration'
     compile 'com.umeng.analytics:analytics:latest.integration'
     compile 'com.meituan.android.walle:library:1.1.4'
+    compile 'me.weyye.hipermission:library:1.0.7'
     // 多dex 打包的类库
     compile 'com.android.support:multidex:1.0.1'
     implementation files('libs/jaudiotagger-2.0.4.jar')
