--- a/aiuilibrary/build.gradle
+++ b/aiuilibrary/build.gradle
@@ -23,11 +23,9 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
-
     compile 'com.orhanobut:logger:1.15'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.0'
-
 }
